--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 :root {
@@ -12,7 +13,7 @@
     --subtitle-color: #5a5757;
     --black-text: #000;
     --color-input: #0D0D0D;
-  }
+}
 
 body{
     background-color: var(--body-background);
