--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -7,6 +7,10 @@ header{
     padding: 3.5625rem 0 5.625rem 0;
 }
 
+header a{
+    text-decoration: none;
+}
+
 header .information {
     width: 21.3125rem;
     
