--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -123,7 +123,8 @@
 /* Popular */
 
 .popular{
-    margin-top: 9.375rem
+    margin-top: 9.375rem;
+    margin-bottom: 9.375rem;
 }
 
 .popular h2{
@@ -139,4 +140,107 @@
 
 .artists-popular {
     display: flex;
+    justify-content: space-between;
+}
+
+.artists-popular .selected-artists{
+    margin-bottom: 3.125rem;
+}
+
+.artists-popular .artists div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    margin-bottom: 2.5rem;
+}
+
+.artists-popular .artists strong {
+    font-size: 1.875rem;
+    font-weight: 500;
+}
+
+.artists-popular .artists div p {
+    font-size: 1.25rem;
+    font-weight: 37.5rem;
+    color: var(--subtitle-color)
+}
+
+.artists-popular .artists div:nth-child(1){
+    margin-bottom: 2.5rem;
+
+}
+
+.artists-popular .artists div:nth-child(2){
+    margin-bottom: 0.75rem;
+}
+
+.artists-popular .artists div p:nth-child(2){
+    color: var(--color-logo);
+}
+
+/* best artists */
+
+.best-artists h2{
+    text-align: center;
+    font-size: 3.125rem;
+    font-weight: 43.75rem;
+
+    margin-bottom: 7.5rem;
+}
+
+.best-artists h2 span{
+    color: var(--color-logo);
+}
+
+.best-artists .best-artists-collection{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    margin-bottom: 3.375rem;
+}
+
+.best-artists-inf {
+    padding: 25px 0;
+}
+
+.best-artists .best-artists-inf {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    justify-self: center;
+    width: 21.875rem;
+    
+    background-color: var(--card-color);
+}
+
+.best-artists .best-artists-inf div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.best-artists .best-artists-inf div p {
+    margin-bottom: 0.625rem;
+}
+
+.best-artists .best-artists-inf div span {
+    color: var(--color-logo)
+}
+
+.best-artists div .best-artists-inf:nth-child(1),
+.best-artists div .best-artists-inf:nth-child(2),
+.best-artists div .best-artists-inf:nth-child(3){
+    margin-bottom: 6.9375rem;
+}
+
+.best-artists > div:nth-child(3){
+    text-align: center;
+    margin-bottom: 9.75rem;
+}
+
+.best-artists div a {
+    padding-right: 0.8125rem;
+    text-decoration: none;
 }
