--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -1,5 +1,5 @@
 .background_fundo{
-    background-image: url(../../../assets/background.png)
+    background-image: url(../../assets/background.png)
 }
 
 .container{
